# google-ad-downloader

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.bat  config.ini.sample  mkdocs.yml  pyproject.toml
docs/: index.md  modules.md
src/google_ads_downloader/: config.py  core.py  main.py
